--- a/app/views/page/colection/_colection1.html.erb
+++ b/app/views/page/colection/_colection1.html.erb
@@ -1,8 +1,11 @@
+<% image1 = "https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,h_630,w_640/v1577259929/upload%20image/Love_Me_Again_-_Raye__Jess_Glynne_.m4a_wv3hmd.jpg"%>
+
 <!-- colection -->
 <section id="engo-1" class="engo-box">
   <div class="colection-v4 clearfix margin-bottom-30">
     <div class="colection-item colection-1">
-      <%= image_pack_tag "banner-img6-3.png" %>
+      <img src="<%= image1 %>">
+      <!-- <%= image_pack_tag "banner-img6-3.png" %> -->
       <div class="colection-info">
         <div class="all-info">
           <div class="info1">New</div>
@@ -27,7 +30,8 @@
 
     </div>
     <div class="colection-item colection-1">
-      <%= image_pack_tag "banner-img6-3.png" %>
+      <img src="<%= image1 %>">
+      <!-- <%= image_pack_tag "banner-img6-3.png" %> -->
       <div class="colection-info">
         <div class="all-info">
           <div class="info1">New </div>
@@ -51,7 +55,8 @@
       </div>
     </div>
     <div class="colection-item colection-1">
-            <%= image_pack_tag "banner-img6-3.png" %>
+      <img src="<%= image1 %>">
+      <!-- <%= image_pack_tag "banner-img6-3.png" %> -->
       <div class="colection-info">
         <div class="all-info">
           <div class="info1">New </div>
