--- a/app/views/page/colection/_colection3.html.erb
+++ b/app/views/page/colection/_colection3.html.erb
@@ -19,7 +19,8 @@
                   <div class="ov2"></div>
                   <div class="ov3"></div>
                   <div class="ov4"></div>
-                  <%= image_pack_tag "colection1.png" %>
+                  <!-- <%= image_pack_tag "colection1.png" %> -->
+                  <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1577260225/upload%20image/Smile_-_Avril_Lavigne.m4a_rfgpgt.jpg">
                 </div>
             </div>
             <div class="col-sm-5 collection-right wow slideInRight" data-wow-delay="0s">
@@ -28,7 +29,8 @@
                   <div class="ov2"></div>
                   <div class="ov3"></div>
                   <div class="ov4"></div>
-                  <%= image_pack_tag "colection2.png" %>
+                  <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1577260225/upload%20image/Smile_-_Avril_Lavigne.m4a_rfgpgt.jpg">
+                  <!-- <%= image_pack_tag "colection2.png" %> -->
                 </div>
                 <div class="collection-info">
                   <label >New </label>
