--- a/app/views/page/colection/_colection4.html.erb
+++ b/app/views/page/colection/_colection4.html.erb
@@ -1,3 +1,4 @@
+<% image = "https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,h_500,w_500/v1575619443/upload%20image/Blinding_Lights_-_The_Weeknd.m4a_smes2w.jpg" %>
 <!-- Colection -->
 <section id="engo-3" class="engo-box">
     <div class="colection-v2">
@@ -9,7 +10,8 @@
                   <div class="ov2"></div>
                   <div class="ov3"></div>
                   <div class="ov4"></div>
-                  <a><%= image_pack_tag "home-banner-img1.png" %></a>
+                  <a><%= image_pack_tag "home-banner-img1.png" %></a> 
+                  <!-- <a href="#"><img src="<%= image %>"></a> -->
                 </div>
             </div>
             <div class="col-sm-4 ">
@@ -18,7 +20,8 @@
                   <div class="ov2"></div>
                   <div class="ov3"></div>
                   <div class="ov4"></div>
-                  <a href="#"><%= image_pack_tag "home-banner-img2.png" %></a>
+                  <a href="#"><img src="<%= image %>"></a> 
+                  <!-- <a href="#"><%= image_pack_tag "home-banner-img2.png" %></a>-->
                 </div>
             </div>
           </div>
@@ -29,7 +32,8 @@
                   <div class="ov2"></div>
                   <div class="ov3"></div>
                   <div class="ov4"></div>
-                  <a href="#"><%= image_pack_tag "home-banner-img3.png" %></a>
+                  <!-- <a href="#"><%= image_pack_tag "home-banner-img3.png" %></a> -->
+                  <a href="#"><img src="<%= image %>"></a> 
                 </div>
             </div>
             <div class="col-sm-8 ">
@@ -39,6 +43,7 @@
                   <div class="ov3"></div>
                   <div class="ov4"></div>
                   <a href="#"><%= image_pack_tag "home-banner-img4.png" %></a>
+                  <!-- <a href="#"><img src="<%= image %>"></a> -->
                 </div>
             </div>
           </div>
