--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
   </head>
 
   <body>
+    <%= render  "page/header/header" %>
     <%= yield %>
+    <%= render  "page/footer" %>
   </body>
 </html>
