--- a/app/views/page/show.html.erb
+++ b/app/views/page/show.html.erb
@@ -1,7 +1,6 @@
 <div id="page">
   <div class="wapper-inner row-offcanvas row-offcanvas-left">
-
-    <%= render  "page/colection/colection1" %>
+    <%= render  "page/colection/colection1.1" %>
 
     <main class="wrapper main-content ">
       <%= render  "page/colection/colection2" %>
