--- a/app/views/page/show.html.erb
+++ b/app/views/page/show.html.erb
@@ -1,15 +1,12 @@
 <div id="page">
   <div class="wapper-inner row-offcanvas row-offcanvas-left">
-    <%= render  "page/colection/colection1.1" %>
-
     <main class="wrapper main-content ">
+      <%= render  "page/colection/slider" %>
       <%= render  "page/colection/colection2" %>
       <%= render  "page/colection/colection3" %>
       <%= render  "page/colection/colection4" %>
       <%= render  "promotion" %>
-    <%= render  "testimonial" %>
-
-    </main>			
-
+      <%= render  "testimonial" %>
+    </main>
   </div>	
 </div>
