update home page

--- a/app/views/layouts/_popup.html.erb
+++ b/app/views/layouts/_popup.html.erb
@@ -10,13 +10,12 @@
       </div>
       <div class="modal-body">
         <div class="popup-content">
-          <h3>News Letter</h3>
-          <div class="des">Subscribe to the Quato Shop mailing list to receive updates on new arrivals,
-            special offers and other discount information.</div>
+          <h3>TƯ VẤN NGAY</h3>
+          <div class="des">Để lại số điện thoại để được tư vấn miễn phí</div>
           <div class="Subcribe">
             <form action="#">
-              <input type="email" class="email" placeholder="Enter your email">
-              <input type="submit" value="Subscribe" class="submit">
+              <input type="email" class="email" placeholder="Số điện thoại liên lạc">
+              <input type="submit" value="Tư vấn ngay" class="submit">
             </form>
           </div>
         </div>
