--- a/app/views/page/_testimonial.html.erb
+++ b/app/views/page/_testimonial.html.erb
@@ -1,3 +1,12 @@
+<div class="box-title">
+  <h3 class="h3-title small">
+    TRẢI NGHIỆM CỦA KHÁCH HÀNG
+  </h3>
+  <div class="title-icon">
+    <img alt="" src="https://res.cloudinary.com/dtbumlftx/image/upload/v1588474399/title-icon_xqwppp.png" alt="">
+  </div>
+</div>
+
 <!-- Testimonial -->
 <section id="engo-4" class="engo-box">
   <div id="testimonial" class="testimonial-v2 margin-bottom-100">
