--- a/app/views/page/colection/_colection2.html.erb
+++ b/app/views/page/colection/_colection2.html.erb
@@ -1,3 +1,12 @@
+<br><br>
+<div class="box-title">
+  <h3 class="h3-title small">
+    MỘT SỐ HÌNH ẢNH KHÁCH HÀNG
+  </h3>
+  <div class="title-icon">
+    <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1588474399/title-icon_xqwppp.png" alt="">
+  </div>
+</div>
 <section id="engo-2" class="engo-box wow fadeInUp" data-wow-duration="1s" data-wow-delay="0ms">
     <div class="collection-v3 margin-bottom-100">
       <div class="container-full-screen">
@@ -9,12 +18,7 @@
                   <div class="ov3"></div>
                   <div class="ov4"></div>
                   <a href="#">
-      <img src="https://w.ladicdn.com/s650x600/5db572314ffea366a4f93d08/1234-20191027104056.png">
-                  <%
-=begin%>
-<%= image_pack_tag "colection4-1.png" %> 
-<%
-=end%>
+                    <img src="https://w.ladicdn.com/s650x600/5db572314ffea366a4f93d08/1234-20191027104056.png">
                   </a>
                 </div>
             </div>
