--- a/app/views/page/show.html.erb
+++ b/app/views/page/show.html.erb
@@ -1,12 +1,16 @@
 <div id="page">
   <div class="wapper-inner row-offcanvas row-offcanvas-left">
     <main class="wrapper main-content ">
-      <%= render  "page/colection/slider" %>
-      <%= render  "page/colection/colection2" %>
-      <%= render  "page/colection/colection3" %>
-      <%= render  "page/colection/colection4" %>
-      <%= render  "promotion" %>
-      <%= render  "testimonial" %>
+      <%= render "page/colection/slider" %>
+      <%= render "page/container/box_title" %>
+      <%= render "page/container/about" %>
+      <%= render "page/container/my_service" %>
+      <%= render "testimonial" %>
+      <%= render "page/container/blog" %>
+      <%= render "page/container/some_image" %>
+      <%= render "page/colection/colection2" %>
+      <%= render "page/colection/colection4" %>
+      <%= render "page/container/contact" %>
     </main>
   </div>	
 </div>
