--- a/app/assets/stylesheets/css/styles.css
+++ b/app/assets/stylesheets/css/styles.css
@@ -15038,7 +15038,7 @@ website:   	http://www.engocreative.com
 
 /*5.13 Parallax*/
 .background-img-v4 {
-  background-image: url("https://res.cloudinary.com/dtbumlftx/image/upload/v1588435537/testimonial3_uwcuhm.png") !important;
+  background-image: url("https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,h_1280,w_1920/v1588523049/0317-Co-so-vat-chat-1920x757-1_jh44yr.jpg") !important;
   z-index: 1;
 }
 
@@ -21935,7 +21935,7 @@ h2.resp-accordion:first-child {
 }
 
 .popup-v2 .mailchimp-modal-content {
-  background: #fff url("../images/bg-popup.jpg") no-repeat scroll right bottom;
+  background: #fff url("https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,h_272,w_900/v1588520179/95334295_167755641261407_8535931833588645888_n_yniyaq.jpg") no-repeat scroll right bottom;
   padding-bottom: 280px;
 }
 
