--- a/app/views/page/_testimonial.html.erb
+++ b/app/views/page/_testimonial.html.erb
@@ -17,27 +17,27 @@
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <div class="thumb-image">
-                <%= image_pack_tag "tes-img.png", alt: "Testimonial", class: "tes-img" %>
+                <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,w_150/v1588522427/tham-my-vien-nevada-3_lzboyl.jpg" alt="" class="tes-img">
               </div>
             </div>
             <div class="swiper-slide">
               <div class="thumb-image">
-                <%= image_pack_tag "tes-img.png", alt: "Testimonial", class: "tes-img" %>
+                <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,w_150/v1588522427/tham-my-vien-nevada-9_avxo7z.jpg" alt="" class="tes-img">
               </div>
             </div>
             <div class="swiper-slide">
               <div class="thumb-image">
-                <%= image_pack_tag "tes-img.png", alt: "Testimonial", class: "tes-img" %>
+                <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,w_150/v1588522426/tham-my-vien-nevada-10_p8txne.jpg" alt="" class="tes-img">
               </div>
             </div>
             <div class="swiper-slide">
               <div class="thumb-image">
-                          <%= image_pack_tag "tes-img.png", alt: "Testimonial", class: "tes-img" %>
+                <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,w_150/v1588522427/tham-my-vien-nevada-7_u8rbs1.jpg" alt="" class="tes-img">
               </div>
             </div>
             <div class="swiper-slide">
               <div class="thumb-image">
-                <%= image_pack_tag "tes-img.png", alt: "Testimonial", class: "tes-img" %>
+                <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,w_150/v1588522427/tham-my-vien-nevada-1_hp2n5g.jpg" alt="" class="tes-img">
               </div>
             </div>
           </div>
