--- a/app/views/page/colection/_colection2.html.erb
+++ b/app/views/page/colection/_colection2.html.erb
@@ -18,7 +18,7 @@
                   <div class="ov3"></div>
                   <div class="ov4"></div>
                   <a href="#">
-                    <img src="https://w.ladicdn.com/s650x600/5db572314ffea366a4f93d08/1234-20191027104056.png">
+                    <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1588520756/T%C3%BAM/95436581_2282684778705392_1008997970856640512_n_pnmubf.jpg">
                   </a>
                 </div>
             </div>
@@ -29,7 +29,7 @@
                   <div class="ov3"></div>
                   <div class="ov4"></div>
                   <a href="#">
-      <img src="https://w.ladicdn.com/s650x600/5db572314ffea366a4f93d08/1234-20191027104056.png">
+                    <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1588520756/T%C3%BAM/95704043_873253303151047_8568994998639394816_n_lhpggo.jpg">
                   </a>
                 </div>
             </div>
@@ -40,7 +40,7 @@
                   <div class="ov3"></div>
                   <div class="ov4"></div>
                   <a href="#">
-      <img src="https://w.ladicdn.com/s650x600/5db572314ffea366a4f93d08/1234-20191027104056.png">
+                    <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1588520756/T%C3%BAM/95463991_3045952385483536_5889962474349789184_n_iqjbto.jpg">
                   </a>
                 </div>
             </div>
