--- a/app/views/page/container/_about.html.erb
+++ b/app/views/page/container/_about.html.erb
@@ -19,9 +19,11 @@
         <div class="col-md-8 col-sm-7">
           <div class="swiper-container about-sl">
             <div class="swiper-wrapper">
-              <div class="swiper-slide"><img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1588478722/ab-sl1_ipxmsl.png" alt=""></div>
-              <div class="swiper-slide"><img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1588478722/ab-sl1_ipxmsl.png" alt=""></div>
-              <div class="swiper-slide"><img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1588478722/ab-sl1_ipxmsl.png" alt=""></div>
+              <div class="swiper-slide"><img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,h_400,w_770/v1588520755/T%C3%BAM/95439101_242516700327497_1009135822126972928_n_fgohpz.jpg" alt=""></div>
+              <div class="swiper-slide"><img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,h_400,w_770/v1588523048/Co-so-vat-chat-800x600-1_xgppmh.jpg" alt=""></div>
+              <div class="swiper-slide"><img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,h_400,w_770/v1588520755/T%C3%BAM/95439101_242516700327497_1009135822126972928_n_fgohpz.jpg" alt=""></div>
+              <div class="swiper-slide"><img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,h_400,w_770/v1588520755/T%C3%BAM/95439101_242516700327497_1009135822126972928_n_fgohpz.jpg" alt=""></div>
+              <div class="swiper-slide"><img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,h_400,w_770/v1588520755/T%C3%BAM/95439101_242516700327497_1009135822126972928_n_fgohpz.jpg" alt=""></div>
             </div>
             <!-- Add Pagination -->
             <div class="swiper-pagination"></div>
