--- a/app/views/page/container/_blog.html.erb
+++ b/app/views/page/container/_blog.html.erb
@@ -15,7 +15,7 @@
           <!-- blog item -->
           <div class="item-blog item owl-item wow fadeInUp animated" data-wow-duration="1s" data-wow-delay="0ms">
             <div class="blog-images">
-              <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1588481307/blog01_s7rqbb.png" alt="">
+              <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,h_265,w_370/v1588523047/tham-my-vien-nevada-3-1_zgnbz4.jpg" alt="">
             </div>
             <div class="blog-content">
               <div class="extra">
@@ -33,7 +33,7 @@
           <!-- blog item -->
           <div class="item-blog item owl-item wow fadeInUp animated" data-wow-duration="1s" data-wow-delay="200ms">
             <div class="blog-images">
-              <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1588481307/blog01_s7rqbb.png" alt="">
+              <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,h_265,w_370/v1588523047/1tac-hai-cua-viec-giam-can-khong-dung-cach-300x200_cyliqw.jpg" alt="">
             </div>
             <div class="blog-content">
               <div class="extra">
@@ -51,7 +51,7 @@
           <!-- blog item -->
           <div class="item-blog item owl-item wow fadeInUp animated" data-wow-duration="1s" data-wow-delay="400ms">
             <div class="blog-images">
-              <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1588481307/blog01_s7rqbb.png" alt="">
+              <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,h_265,w_370/v1588523047/1an-dua-hau-giam-can-dung-cach-300x200_ykjlw4.jpg" alt="">
             </div>
             <div class="blog-content">
               <div class="extra">
@@ -69,7 +69,7 @@
           <!-- blog item -->
           <div class="item-blog item owl-item wow fadeInUp animated" data-wow-duration="1s" data-wow-delay="600ms">
             <div class="blog-images">
-              <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1588481307/blog01_s7rqbb.png" alt="">
+              <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,h_265,w_370/v1588523047/1an-dua-hau-giam-can-dung-cach-300x200_ykjlw4.jpg" alt="">
             </div>
             <div class="blog-content">
               <div class="extra">
