--- a/app/views/page/container/_my_service.html.erb
+++ b/app/views/page/container/_my_service.html.erb
@@ -24,7 +24,7 @@
             </ul>
           </div>
           <div class="images-merber">
-            <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1588479499/member-1_jlygii.png" alt="">
+            <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,h_405,w_270/v1588520757/T%C3%BAM/95573265_273472847023462_3285540983759962112_n_oaaxbp.jpg" alt="">
           </div>
           <div class="title-merber">
             <h3 class="name"><span>LÀM ĐẸP</span></h3>
@@ -41,7 +41,7 @@
             </ul>
           </div>
           <div class="images-merber">
-            <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1588479499/member-1_jlygii.png" alt="">
+            <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,h_405,w_270/v1588520757/T%C3%BAM/95556327_964684623974897_4225021541676482560_n_h23pad.jpg" alt="">
           </div>
           <div class="title-merber">
             <h3 class="name"><span>LÀM ĐẸP</span></h3>
@@ -58,7 +58,7 @@
             </ul>
           </div>
           <div class="images-merber">
-            <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1588479499/member-1_jlygii.png" alt="">
+            <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,h_405,w_270/v1588520757/T%C3%BAM/95159577_1563883730456227_8713706195031949312_n_p6jtue.jpg" alt="">
           </div>
           <div class="title-merber">
             <h3 class="name"><span>LÀM ĐẸP</span></h3>
@@ -75,7 +75,7 @@
             </ul>
           </div>
           <div class="images-merber">
-            <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1588479499/member-1_jlygii.png" alt="">
+            <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,h_405,w_270/v1588522026/T%C3%BAM/94616197_521733665161724_914606967786307584_n_hagazv.jpg" alt="">
           </div>
           <div class="title-merber">
             <h3 class="name"><span>LÀM ĐẸP</span></h3>
@@ -92,7 +92,7 @@
             </ul>
           </div>
           <div class="images-merber">
-            <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1588479499/member-1_jlygii.png" alt="">
+            <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,h_405,w_270/v1588522026/T%C3%BAM/94616197_521733665161724_914606967786307584_n_hagazv.jpg" alt="">
           </div>
           <div class="title-merber">
             <h3 class="name"><span>LÀM ĐẸP</span></h3>
@@ -109,7 +109,7 @@
             </ul>
           </div>
           <div class="images-merber">
-            <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1588479499/member-1_jlygii.png" alt="">
+            <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,h_405,w_270/v1588522026/T%C3%BAM/94616197_521733665161724_914606967786307584_n_hagazv.jpg" alt="">
           </div>
           <div class="title-merber">
             <h3 class="name"><span>LÀM ĐẸP</span></h3>
