--- a/app/views/page/container/_slider.html.erb
+++ b/app/views/page/container/_slider.html.erb
@@ -5,7 +5,7 @@
       <div class="r_slider" data-width="1920" data-height="630" data-screen="off" data-fullwidth="on">
         <ul>
           <li class="f_left" data-transition="cube" data-slotamount="7">
-            <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1588439481/banner-img3_f3d1yc.png" alt="" data-bgrepeat="no-repeat" data-bgfit="cover" data-bgposition="center center">
+            <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,h_630,w_1920/v1587826286/T%C3%BAM/94881220_223623185632332_6713885661562142720_n_kfhxi4.jpg" alt="" data-bgrepeat="no-repeat" data-bgfit="cover" data-bgposition="center center">
             <div class="caption lft ltt" data-x="center" data-y="205" data-speed="1500" data-start="1200" data-easing="easeOutBounce">
               <p>
 <!--                <img src="images/assets/text-slider.png" alt="">-->
@@ -20,11 +20,11 @@
               </p>
             </div>
             <div class="caption lft ltt" data-x="680" data-y="255" data-speed="1500" data-start="1400" data-easing="easeOutBounce" style="font-size: 50px; font-style:italic;">
-              <p><span class="slider-top small12">ZZZZZZZ</span></p>
+              <p><span class="slider-top small12">xăm</span></p>
             </div>
           </li>
           <li class="f_left" data-transition="cube" data-slotamount="7">
-            <img src="https://res.cloudinary.com/dtbumlftx/image/upload/v1588439481/banner-img3_f3d1yc.png" alt="" data-bgrepeat="no-repeat" data-bgfit="cover" data-bgposition="center center">
+            <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,h_630,w_1920/v1588523049/0317-Co-so-vat-chat-1920x757-1_jh44yr.jpg" alt="" data-bgrepeat="no-repeat" data-bgfit="cover" data-bgposition="center center">
             <div class="caption lft ltt" data-x="550" data-y="140" data-speed="1500" data-start="1200" data-easing="easeOutBounce " style="font-size: 84px;">
               <p><span class="slider-top big-text big1"></span></p>
             </div>
@@ -36,14 +36,14 @@
             </div>
             <div class="caption lft ltt" data-x="400" data-y="225" data-speed="1500" data-start="2000" data-easing="easeOutBounce" style="font-size: 18px; line-height: 20px;">
               <p class="small-text">
-                làm đẹp<br>chạm<br>FOR WOMEN
+                thẩm mĩ<br>đẹp<br>FOR WOMEN
               </p>
             </div>
             <div class="caption lft ltt" data-x="870" data-y="180" data-speed="1500" data-start="1400" data-easing="easeOutBounce" style="font-size: 50px;font-style: italic">
-              <p><span class="slider-top small1">XXXXXXX</span></p>
+              <p><span class="slider-top small1">giảm cân</span></p>
             </div>
             <div class="caption lft ltt" data-x="450" data-y="315" data-speed="1500" data-start="1400" data-easing="easeOutBounce" style="font-size: 50px; font-style: italic">
-              <p><span class="slider-top  small1">AAAAAAAA</span></p>
+              <p><span class="slider-top  small1">chạm khắc</span></p>
             </div>
           </li>
         </ul>
