--- a/app/views/page/header/_header.html.erb
+++ b/app/views/page/header/_header.html.erb
@@ -16,7 +16,8 @@
           <!-- .logo -->
           <div class="logo">
             <a class="logo" title="Magento Commerce" href="#">
-              <%= image_pack_tag "logo/logo_6.svg"%>
+              <img src="https://res.cloudinary.com/dtbumlftx/image/upload/c_scale,w_70/v1588520179/95334295_167755641261407_8535931833588645888_n_yniyaq.jpg" alt="">
+              <%#= image_pack_tag "logo/logo_6.svg"%>
             </a>
           </div>
           <!-- end .logo -->
