--- a/app/views/page/show.html.erb
+++ b/app/views/page/show.html.erb
@@ -1,7 +1,7 @@
 <div id="page">
   <div class="wapper-inner row-offcanvas row-offcanvas-left">
     <main class="wrapper main-content ">
-      <%= render "page/colection/slider" %>
+      <%= render "page/container/slider" %>
       <%= render "page/container/box_title" %>
       <%= render "page/container/about" %>
       <%= render "page/container/my_service" %>
@@ -9,7 +9,6 @@
       <%= render "page/container/blog" %>
       <%= render "page/container/some_image" %>
       <%= render "page/colection/colection2" %>
-      <%= render "page/colection/colection4" %>
       <%= render "page/container/contact" %>
     </main>
   </div>	
